syntax = "proto3";

package order;

import "payment/payment.proto";
import "store/store.proto";
import "user/user.proto";

option go_package = "sabitou/proto/order;order";

service OrderService {
  rpc GenerateBill(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_PENDING = 5;
  STATUS_PROCESSING = 1;
  STATUS_COMPLETED = 2;
  STATUS_CANCELLED = 3;
}

message OrderItem {
  string product_id = 1;
  double quantity = 2;
}

message Order {
  string id = 1;
  string store_id = 2;
  repeated string payment_id = 4;
  string initiator_id = 5;
  string status = 9;
  repeated OrderItem order_items = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateOrderRequest {
  Order order = 1;
}

message CreateOrderResponse {
  string id = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  string id = 1;
  store.Store store = 2;
  repeated payment.Payment payment = 4;
  user.User initiator = 5;
  repeated OrderItem order_items = 6;
  string status = 9;
  string created_at = 7;
  string updated_at = 8;
}

message UpdateOrderRequest {
  Order order = 1;
}

message UpdateOrderResponse {
  Order order = 1;
}

message DeleteOrderRequest {
  int32 id = 1;
}

message DeleteOrderResponse {
  bool success = 1;
}
